welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:-6: error: Missing closing brace `}' assumed here
try {
^cigarParty:1: error: expected class or object definition
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
^