welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  if (isWeekend==true){
    if (40<=cigars)
    	return true
    else
    	return false
  }
  else{
    if (40<=cigars & cigars<=60)
    	return true
    else
    	return false
  }